[package]
name = "mitsu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = "1.0.144"
serde_json = "1.0.85"
tokio = "1.20.1"

[profile.release]
overflow-checks = true
panic = "abort"
opt-level = 3
